[gd_scene load_steps=11 format=2]

[ext_resource path="res://DrawWord.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/back.png" type="Texture" id=2]
[ext_resource path="res://assets/theme/DejaVuFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/theme/PhoneticTheme.tres" type="Theme" id=4]
[ext_resource path="res://assets/sound/fail.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/sound/success.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/icons/next.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/record.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/speaker.png" type="Texture" id=11]
[ext_resource path="res://art/images/chat.jpg" type="Texture" id=12]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wrong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Good" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="MainPage" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="MainPage"]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="MainPage/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="MainPage/Control/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="WordContainer" type="MarginContainer" parent="MainPage/Control/MarginContainer/VBox"]
margin_top = 272.0
margin_right = 1024.0
margin_bottom = 316.0
size_flags_vertical = 0

[node name="Word" type="Label" parent="MainPage/Control/MarginContainer/VBox/WordContainer"]
margin_right = 1024.0
margin_bottom = 44.0
theme = ExtResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "Mot"
align = 1

[node name="ImageContainer" type="MarginContainer" parent="MainPage/Control/MarginContainer/VBox"]
margin_top = 320.0
margin_right = 1024.0
margin_bottom = 324.0
size_flags_vertical = 0
custom_constants/margin_right = 50
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MainPage/Control/MarginContainer/VBox/ImageContainer"]
margin_left = 50.0
margin_right = 974.0
margin_bottom = 4.0
alignment = 1

[node name="Box" type="HBoxContainer" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer"]
margin_left = 460.0
margin_right = 460.0
margin_bottom = 4.0
alignment = 1

[node name="Control" type="Control" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/Box"]
margin_bottom = 4.0

[node name="Image" type="TextureRect" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/Box/Control"]
margin_right = 200.0
margin_bottom = 200.0
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainerButton" type="VBoxContainer" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer"]
margin_left = 464.0
margin_right = 464.0
margin_bottom = 4.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Control" type="Control" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton"]

[node name="Speak" type="TextureButton" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton/Control"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton"]
margin_top = 4.0
margin_bottom = 4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Record" type="TextureButton" parent="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton/Control2"]
margin_right = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ImgBorel" type="MarginContainer" parent="MainPage/Control/MarginContainer/VBox"]
margin_top = 328.0
margin_right = 1024.0
margin_bottom = 328.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxBorel" type="HBoxContainer" parent="MainPage/Control/MarginContainer/VBox/ImgBorel"]
margin_right = 1024.0
alignment = 1

[node name="Next" type="TextureButton" parent="MainPage/Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -100.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="MainPage/Control"]
margin_right = 177.0
margin_bottom = 160.0
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton/Control/Speak" to="." method="_on_Speak_pressed"]
[connection signal="pressed" from="MainPage/Control/MarginContainer/VBox/ImageContainer/HBoxContainer/VBoxContainerButton/Control2/Record" to="." method="_on_Record_pressed"]
[connection signal="pressed" from="MainPage/Control/Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="MainPage/Control/Back" to="." method="_on_Back_pressed"]
